--- a/src/components/Player/Player.scss
+++ b/src/components/Player/Player.scss
@@ -36,12 +36,12 @@
     &__pos1 {
         position: absolute;
         right: 0;
-        bottom: 25%;
+        bottom: 29%;
     }
     &__pos2 {
         position: absolute;
         left: 0;
-        bottom: 25%;
+        bottom: 29%;
     }
     &__cards {
         position: relative;
